<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
         https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>fr.github</groupId>
    <artifactId>ethanpod-parent</artifactId>
    <version>0.0.1</version>
    <packaging>pom</packaging>
    <name>EthanPod Parent</name>

    <modules>
        <module>ethanpod-core</module>
        <module>ethanpod-util</module>
        <module>ethanpod-logic</module>
        <module>ethanpod-service</module>
        <module>ethanpod-view</module>
        <module>ethanpod-app</module>
        <module>ethanpod-controller</module>
        <module>ethanpod-exception</module>
        <module>ethanpod-event</module>
    </modules>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>22</maven.compiler.source>
        <maven.compiler.target>22</maven.compiler.target>
        <junit.version>5.10.0</junit.version>
        <javafx.version>24.0.1</javafx.version>
        <sqlite.version>3.46.0.1</sqlite.version>
        <log4j.version>2.23.1</log4j.version>
        <slf4j.version>2.0.17</slf4j.version>
        <jackson.version>2.18.2</jackson.version>
        <dom4j.version>2.1.4</dom4j.version>
        <jaxen.version>2.0.0</jaxen.version>
        <rssreader.version>3.9.1</rssreader.version>
        <ikonli.version>12.3.1</ikonli.version>
        <hikaricp.version>6.3.0</hikaricp.version>
        <mockito.version>5.18.0</mockito.version>

        <!-- SonarQube -->
        <sonar.core.codeCoveragePlugin>jacoco</sonar.core.codeCoveragePlugin>
        <sonar.dynamicAnalysis>reuseReports</sonar.dynamicAnalysis>
        <sonar.coverage.jacoco.xmlReportPaths>../app-it/target/site/jacoco-aggregate/jacoco.xml
        </sonar.coverage.jacoco.xmlReportPaths>
    </properties>

    <dependencyManagement>
        <dependencies>
            <!-- Modules internes -->
            <dependency>
                <groupId>fr.github</groupId>
                <artifactId>ethanpod-core</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>fr.github</groupId>
                <artifactId>ethanpod-util</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>fr.github</groupId>
                <artifactId>ethanpod-logic</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>fr.github</groupId>
                <artifactId>ethanpod-service</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>fr.github</groupId>
                <artifactId>ethanpod-controller</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>fr.github</groupId>
                <artifactId>ethanpod-view</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>fr.github</groupId>
                <artifactId>ethanpod-event</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>fr.github</groupId>
                <artifactId>ethanpod-exception</artifactId>
                <version>${project.version}</version>
            </dependency>

            <!-- JavaFX -->
            <dependency>
                <groupId>org.openjfx</groupId>
                <artifactId>javafx-controls</artifactId>
                <version>${javafx.version}</version>
            </dependency>

            <!-- Base de données -->
            <dependency>
                <groupId>org.xerial</groupId>
                <artifactId>sqlite-jdbc</artifactId>
                <version>${sqlite.version}</version>
            </dependency>
            <dependency>
                <groupId>com.zaxxer</groupId>
                <artifactId>HikariCP</artifactId>
                <version>${hikaricp.version}</version>
            </dependency>

            <!-- Logging -->
            <dependency>
                <groupId>org.apache.logging.log4j</groupId>
                <artifactId>log4j-api</artifactId>
                <version>${log4j.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.logging.log4j</groupId>
                <artifactId>log4j-core</artifactId>
                <version>${log4j.version}</version>
            </dependency>
            <dependency>
                <groupId>org.slf4j</groupId>
                <artifactId>slf4j-api</artifactId>
                <version>${slf4j.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.logging.log4j</groupId>
                <artifactId>log4j-slf4j2-impl</artifactId>
                <version>${log4j.version}</version>
            </dependency>

            <!-- XML et JSON -->
            <dependency>
                <groupId>jaxen</groupId>
                <artifactId>jaxen</artifactId>
                <version>${jaxen.version}</version>
            </dependency>
            <dependency>
                <groupId>org.dom4j</groupId>
                <artifactId>dom4j</artifactId>
                <version>${dom4j.version}</version>
            </dependency>
            <dependency>
                <groupId>com.fasterxml.jackson.core</groupId>
                <artifactId>jackson-databind</artifactId>
                <version>${jackson.version}</version>
            </dependency>

            <!-- RSS -->
            <dependency>
                <groupId>com.apptasticsoftware</groupId>
                <artifactId>rssreader</artifactId>
                <version>${rssreader.version}</version>
            </dependency>

            <!-- Icônes -->
            <dependency>
                <groupId>org.kordamp.ikonli</groupId>
                <artifactId>ikonli-javafx</artifactId>
                <version>${ikonli.version}</version>
            </dependency>
            <dependency>
                <groupId>org.kordamp.ikonli</groupId>
                <artifactId>ikonli-materialdesign2-pack</artifactId>
                <version>${ikonli.version}</version>
            </dependency>

            <!-- Tests -->
            <dependency>
                <groupId>org.junit.jupiter</groupId>
                <artifactId>junit-jupiter-api</artifactId>
                <version>${junit.version}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.junit.jupiter</groupId>
                <artifactId>junit-jupiter-engine</artifactId>
                <version>${junit.version}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.mockito</groupId>
                <artifactId>mockito-core</artifactId>
                <version>${mockito.version}</version>
                <scope>test</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.11.0</version>
                    <configuration>
                        <source>22</source>
                        <target>22</target>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.jacoco</groupId>
                    <artifactId>jacoco-maven-plugin</artifactId>
                    <version>0.8.12</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-assembly-plugin</artifactId>
                    <version>3.7.1</version>
                </plugin>
            </plugins>
        </pluginManagement>

        <plugins>
            <!-- JaCoCo pour tous les modules -->
            <plugin>
                <groupId>org.jacoco</groupId>
                <artifactId>jacoco-maven-plugin</artifactId>
                <executions>
                    <execution>
                        <goals>
                            <goal>prepare-agent</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>report</id>
                        <goals>
                            <goal>report</goal>
                        </goals>
                        <configuration>
                            <formats>
                                <format>XML</format>
                            </formats>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>